floating whatsapp added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div>
     <app-header class="sticky top-0 z-50"></app-header>
+    <app-floating-whatsapp></app-floating-whatsapp>
     <app-about-us id="about"></app-about-us>
     <app-auto-slider id="gallery"></app-auto-slider>
     <app-contact-us id="contact"></app-contact-us>
