--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,11 +4,11 @@
       <div>
         <h3 class="text-lg font-semibold mb-2">Contact Us</h3>
         <p class="mb-2">
-          <span class="font-bold">Address:</span> 7-A, First Floor, Gali No.7, Near Ramesh Dhaba, Govindpuri, Kalkaji,
+          <span class="font-bold">Address:</span> 793/7-A, First Floor, Gali No.7, Near Ramesh Dhaba, Govindpuri, Kalkaji,
           New Delhi-110019
         </p>
         <p class="mb-2">
-          <span class="font-bold">Phone:</span> +91 9650387642
+          <span class="font-bold">Phone:</span> +91 9315478178
         </p>
         <p class="mb-2">
           <span class="font-bold">GST No:</span> 07FMNPK8963A1ZO
