--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -15,7 +15,7 @@
         </p>
       </div>
       <div>
-        <h3 class="text-lg font-semibold mb-2">Get In Touch Us</h3>
+        <h3 class="text-lg font-semibold mb-2">Get In Touch with Us</h3>
         <div class="flex space-x-4">
           <a [href]="getWhatsAppLink()" target="_blank"
             class="text-blue-500 hover:text-blue-400 transition" aria-label="Facebook">
